@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -154,7 +154,7 @@ class PropertyMigration {
 		ConfigurationPropertyName oldName = property.getName();
 		ConfigurationPropertyName oldPrefix = ConfigurationPropertyName.of(metadata.getId());
 		Assert.state(oldPrefix.isAncestorOf(oldName),
-				String.format("'%s' is not an ancestor of '%s'", oldPrefix, oldName));
+				() -> "'%s' is not an ancestor of '%s'".formatted(oldPrefix, oldName));
 		ConfigurationPropertyName newPrefix = ConfigurationPropertyName.of(replacement.getId());
 		return newPrefix.append(oldName.subName(oldPrefix.getNumberOfElements()));
 	}
